<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.BindPhoneActivity">

    <com.example.arttower.design.CommonTitle
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="绑定手机" />

    <AutoCompleteTextView
        android:id="@+id/bind_phone"
        android:layout_width="@dimen/dp_311"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_80"
        android:autoText="true"
        android:background="@drawable/shape_login_edit"
        android:cursorVisible="true"
        android:hint="@string/phone_num"
        android:paddingLeft="@dimen/dp_15"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/cl_e4e1de"
        android:textCursorDrawable="@drawable/test_cursor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_24"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/bind_auth_code"
            android:layout_width="@dimen/dp_189"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_32"
            android:background="@drawable/shape_login_edit"
            android:cursorVisible="true"
            android:hint="@string/auth_code"
            android:paddingLeft="@dimen/dp_15"
            android:textColor="@color/black"
            android:textColorHint="#E4E1DE"
            android:textCursorDrawable="@drawable/test_cursor" />

        <Button
            android:id="@+id/bind_send_code"
            android:layout_width="@dimen/dp_114"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_8"
            android:background="@drawable/shape_8dp"
            android:text="发送验证码"
            android:textColor="@color/white"
            android:textColorHint="@color/cl_e4e1de" />

    </LinearLayout>

    <Button
        android:id="@+id/phone_submit"
        android:layout_width="@dimen/dp_311"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_84"
        android:background="@drawable/shape_submit"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

</LinearLayout>