<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.example.arttower.design.CommonTitle
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="找回密码"
            app:backImage="@drawable/back_icon"
            app:canBack="true" />

        <ImageView
            android:layout_width="@dimen/dp_96"
            android:layout_height="@dimen/dp_96"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_16"
            android:src="@drawable/tingwu"
            />

        <AutoCompleteTextView
            android:id="@+id/zhaohui_phone_num"
            android:layout_width="@dimen/dp_311"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_48"
            android:background="@drawable/shape_login_edit"
            android:hint="@string/phone_num"
            android:autoText="true"
            android:paddingLeft="@dimen/dp_15"
            android:singleLine="true"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="11"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/test_cursor"
            android:textColorHint="@color/cl_e4e1de" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_36"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/zhaohui_auth_code"
                android:layout_width="@dimen/dp_189"
                android:layout_height="@dimen/dp_44"
                android:layout_marginLeft="@dimen/dp_32"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/auth_code"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/test_cursor"
                android:paddingLeft="@dimen/dp_15"
                android:textColor="@color/black"
                android:textColorHint="#E4E1DE"
                android:inputType="number"
                android:maxLength="6"/>

            <Button
                android:id="@+id/send_code"
                android:layout_width="@dimen/dp_114"
                android:layout_height="@dimen/dp_44"
                android:layout_marginLeft="@dimen/dp_8"
                android:background="@drawable/shape_8dp"
                android:text="发送验证码"
                android:textColor="@color/white"
                android:textColorHint="@color/cl_e4e1de" />

        </LinearLayout>

        <Button
            android:id="@+id/forgetpsd_next"
            android:layout_width="@dimen/dp_298"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_43"
            android:background="@drawable/shape_submit"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>
</RelativeLayout>