<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.example.arttower.design.CommonTitle
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="手机号注册/登录" />

        <ImageView
            android:layout_width="@dimen/dp_96"
            android:layout_height="@dimen/dp_96"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_16"
            android:src="@drawable/tingwu"
            />

        <AutoCompleteTextView
            android:id="@+id/phone_num"
            android:layout_width="@dimen/dp_311"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/shape_login_edit"
            android:hint="@string/phone_num"
            android:autoText="true"
            android:paddingLeft="@dimen/dp_15"
            android:singleLine="true"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="11"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/test_cursor"
            android:textColorHint="@color/cl_e4e1de" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/auth_code"
                android:layout_width="@dimen/dp_189"
                android:layout_height="@dimen/dp_44"
                android:layout_marginLeft="@dimen/dp_32"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/auth_code"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/test_cursor"
                android:paddingLeft="@dimen/dp_15"
                android:textColor="@color/black"
                android:textColorHint="#E4E1DE"
                android:inputType="number"
                android:maxLength="6"/>

            <Button
                android:id="@+id/home_send_code"
                android:layout_width="@dimen/dp_114"
                android:layout_height="@dimen/dp_44"
                android:layout_marginLeft="@dimen/dp_8"
                android:background="@drawable/shape_8dp"
                android:text="发送验证码"
                android:textColor="@color/white"
                android:textColorHint="@color/cl_e4e1de" />

        </LinearLayout>

        <Button
            android:id="@+id/logphon_submit"
            android:layout_width="@dimen/dp_298"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/shape_submit"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="@dimen/dp_192"
            android:layout_height="@dimen/dp_17"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_8"
            android:text="未注册用户验证后将立即注册并登录"
            android:textColor="@color/cl_e4e1de"
            android:textSize="@dimen/sp_12" />

        <LinearLayout
            android:id="@+id/psd_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView

                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_11"
                android:text="密码登录"
                android:textColor="@color/app_theme_color"
                android:textSize="@dimen/sp_12" />

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_8"
                android:src="@drawable/arrows_r" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_6"
                android:text="先逛逛"
                android:textColor="@color/app_theme_color"
                android:textSize="@dimen/sp_12" />

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_3"
                android:src="@drawable/arrows_r" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp_128"
                android:layout_height="@dimen/dp_1"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_8"
                android:background="@color/cl_f2f2f2" />

            <TextView
                android:layout_width="@dimen/dp_72"
                android:layout_height="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_8"
                android:text="@string/other_login"
                android:textColor="@color/cl_e4e1de"
                android:textSize="@dimen/sp_12"
                android:textStyle="normal" />

            <View
                android:layout_width="@dimen/dp_128"
                android:layout_height="@dimen/dp_1"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:background="@color/cl_f2f2f2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/login_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_87"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_32"
                    android:src="@drawable/sign_wechat" />

                <TextView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_17"
                    android:text="@string/wechat"
                    android:textColor="@color/cl_4d4c4b"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_32"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:src="@drawable/sing_qq" />

                <TextView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_17"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:text="@string/qq"
                    android:textColor="@color/cl_4d4c4b"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_32"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:src="@drawable/sign_wb" />

                <TextView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_17"
                    android:text="@string/sina"
                    android:textColor="@color/cl_4d4c4b"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/dp_84"
            android:layout_height="@dimen/dp_16"
            android:text="登录即代表同意"
            android:textColor="@color/cl_ffe4e1de"
            android:textSize="@dimen/sp_12"
            android:layout_marginLeft="@dimen/dp_68"
            />
        <TextView
            android:id="@+id/protocol"
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_16"
            android:text="《用户协议》"
            android:textColor="@color/app_theme_color"
            android:textSize="@dimen/sp_12"
            />
        <TextView
            android:layout_width="@dimen/dp_12"
            android:layout_height="@dimen/dp_16"
            android:text="和"
            android:textColor="@color/cl_ffe4e1de"
            android:textSize="@dimen/sp_12"
            />
        <TextView
            android:id="@+id/policy"
            android:layout_width="72dp"
            android:layout_height="@dimen/dp_16"
            android:text="《隐私政策》"
            android:textColor="@color/app_theme_color"
            android:textSize="@dimen/sp_12"
            />
    </LinearLayout>
</RelativeLayout>